--- a/assets/scss/main-page/category.scss
+++ b/assets/scss/main-page/category.scss
@@ -1,6 +1,7 @@
 #Category {
-  width: 236px;
-  margin-left: 5vw; margin-top: 111px;
+  width: 356px;
+  margin-top: 111px;
+  // margin-left: 2vw;
   .category {
     padding-left: 18px;
     .title {
