--- a/assets/scss/main-page/top-bar.scss
+++ b/assets/scss/main-page/top-bar.scss
@@ -40,14 +40,14 @@
       }
     }
   }
-  @include min-desktop {
+  @include desktop {
     height: 80px;
     background: #FAFAFA;
     box-shadow: 0px 0px 4px rgba(0, 52, 138, 0.04), 0px 4px 22px rgba(0, 0, 0, 0.06);
     margin: 0 auto;
     .topbar {
       display: flex;
-      width: 70vw;
+      width: 90vw;
       margin: 0 auto;
       .logo-left {
         padding: 32px 12px 32px 0;
