--- a/assets/scss/main-page/top-bar.scss
+++ b/assets/scss/main-page/top-bar.scss
@@ -84,4 +84,49 @@
       }
     }
   }
+
+  @include screen {
+    height: 80px;
+    background: #FAFAFA;
+    box-shadow: 0px 0px 4px rgba(0, 52, 138, 0.04), 0px 4px 22px rgba(0, 0, 0, 0.06);
+    margin: 0 auto;
+    .topbar {
+      display: flex;
+      width: 90vw;
+      margin: 0 auto;
+      .logo-left {
+        padding: 32px 12px 32px 0;
+        font-size: .75rem; font-weight: 500;
+        color: #737373;
+      }
+      .logo {
+        padding-top: 22px;
+        img {
+          width: 139px; height: 35px;
+        }
+      }
+      .search {
+        flex-grow: 1;
+      }
+      .posting-btn {
+        padding-top: 31px; margin-right: 24px;
+        font-size: .94rem; font-weight: 700;
+        color: #005B9A;
+        cursor: pointer;
+      }
+      .login {
+        padding-top: 31px; margin-right: 32px;
+        font-size: .94rem; font-weight: 700;
+        color: #391B1B;
+        cursor: pointer;
+      }
+      .profile {
+        padding-top: 24px;
+        img {
+          width: 32px;
+          height: 32px;
+        }
+      }
+    }
+  }
 }
