--- a/assets/scss/main-page/category.scss
+++ b/assets/scss/main-page/category.scss
@@ -1,19 +1,30 @@
 @import '@/assets/scss/util.scss';
 
 #Category {
-  margin-top: 111px;
+  // margin-top: 80px;
   // margin-left: 2vw;
   .category {
-    padding-left: 18px;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+  .category::-webkit-scrollbar {
+      display: none; /* Chrome, Safari, Opera*/
+  }
+  .category {
+    // padding-left: 18px;
+    width: 170px;
+    margin: 0 auto;
+    height: calc(100vh - 80px); overflow: scroll;
     .title {
-      height: 55px; line-height: 55px;
-      font-size: 1.38rem; font-weight: 700;
+      padding-top: 20px;
+      height: 35px; line-height: 35px;
+      font-size: 1rem; font-weight: 700;
       cursor: pointer;
     }
     .sub-title {
-      height: 48px; line-height: 48px;
+      height: 33px; line-height: 33px;
       padding-left: 20px;
-      font-size: 1.13rem; font-weight: 500;
+      font-size: .88rem; font-weight: 500;
       color: #737373;
       &.selected {
         color: #000000;
@@ -29,9 +40,9 @@
     }
   }
   .posting-btn {
-    width: 205px; height: 48px; line-height: 48px;
-    margin-top: 30px; margin-left: 18px;
-    font-size: 1rem; font-weight: 550;
+    width: 165px; height: 48px; line-height: 48px;
+    margin-top: 30px; margin-bottom: 30px;
+    font-size: 1rem; font-weight: 500;
     text-align: center;
     background-color: #FFFFFF;
     border: 2px solid #3E82F1;
@@ -39,15 +50,15 @@
     cursor: pointer;
   }
   @include mobile {
-    width: 200px;
+    width: 170px;
   }
   @include tablet {
-    width: 250px;
+    width: 170px;
   }
   @include desktop {
-    width: 300px;
+    width: 170px;
   }
   @include screen {
-    width: 356px;
+    width: 170px;
   }
 }
