fix: 카드뷰 변경된 디자인으로  수정

--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -4,32 +4,31 @@
   flex-grow: 1;
   .cards-wrp {
     display: grid;
-    grid-gap: 30px;
+    grid-gap: 32px;
     padding-top: 70px; padding-bottom: 100px;
     width: 890px; margin: 0 auto;
     .card-wrp {
-      // display: inline-block;
-      // width: 300px; height: 280px;
-      // margin-top: 38px; margin-left: 30px;
-      width: 230px; height: 230px;
+      width: 360px; height: 114px;
       padding: 20px;
       background: #FFFFFF;
       box-shadow: 0px 0px 4px rgba(0, 52, 138, 0.04), 0px 8px 16px rgba(0, 52, 138, 0.08);
       border: 2px solid #FFFFFF;
       border-radius: 16px;
       cursor: pointer;
-      // &.selected {
-      //   border: 2px solid #3E82F1;
-      // }
       .card-top {
         display: flex;
-        height: 60px;
-        .card-title {
+        height: 49px;
+        .writer-title-wrp {
           flex-grow: 1;
-          line-height: 2rem;
-          margin-top: -30px;
-          white-space: pre-line;
-          font-size: 1.13rem; font-weight: 500;
+          .writer {
+            height: 22px; line-height: 22px;
+            font-size: .81rem; font-weight: 500;
+            color: #A3A3A3;
+          }
+          .card-title {
+            width: 250px; line-height: 2rem;
+            font-size: 1.13rem; font-weight: 700;
+          }
         }
         .book-mark {
           img {
@@ -38,29 +37,26 @@
         }
       }
       .card-middle {
-        color: #737373;
-        .line-01 {
-          height: 62px; line-height: 62px;
-          font-size: 1rem; font-weight: 500;
-          border-bottom: 1px solid #E7E7E7;
-        }
-        .line-02 {
-          height: 75px;
-          padding-top: 16px;
+        color: #4D4D4D;
+        .content {
+          height: 22px;
+          margin-top: 10px;
+          font-size: .88rem;
         }
       }
       .card-bottom {
-        display: grid;
-        grid-gap: 9px;
-        grid-template-columns: repeat(3,85px);
-        .role {
-          width: 85px; height: 33px; line-height: 33px;
-          // padding: 0 12px;
-          background: #FFFFFF;
-          border: 1px solid #E7E7E7;
-          border-radius: 6px;
-          font-size: .88rem;
+        display: flex;
+        div:first-child {
+          flex-grow: 1;
+        }
+        .gather-d-day {
+          width: 50px; height: 20px; line-height: 20px;
+          padding: 2px 6px 3px; margin-top: 8px;
+          background: #3E82F1;
+          border-radius: 12px;
+          font-size: .75rem; font-weight: 700;
           text-align: center;
+          color: #ffffff;
         }
       }
     }
@@ -69,37 +65,37 @@
     }
     @include mobile {
       width: 500px;
-      grid-template-columns: repeat(1,324px);
+      grid-template-columns: repeat(1,402);
       .cards-wrp {
         .card-wrp {
-          width: 276px; height: 252px;
+          width: 360px; height: 114px;
         } 
       }
     }
     @include tablet {
       width: 800px; 
-      grid-template-columns: repeat(2,324px);
+      grid-template-columns: repeat(2,402px);
       .cards-wrp {
         .card-wrp {
-          width: 276px; height: 252px;
+          width: 360px; height: 114px;
         } 
       }
     }
     @include desktop {
       // width: 890px; 
-      grid-template-columns: repeat(3,270px);
+      grid-template-columns: repeat(2,402px);
       .cards-wrp {
         .card-wrp {
-          width: 230px; height: 230px;
+          width: 360px; height: 114px;
         } 
       }
     }
     @include screen {
       // width: 890px;
-      grid-template-columns: repeat(3,270px);
+      grid-template-columns: repeat(3,400px);
       .cards-wrp {
         .card-wrp {
-          width: 230px; height: 230px;
+          width: 360px; height: 114px;
         } 
       }
     }
