fix: 로그인 했을 때 글쓰기 들어갈 수 있도록

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  font-family: 'Pretendard', Helvetica, Arial;
+  font-family: 'Noto Sans KR', 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0px;
