--- a/assets/scss/main-page/category.scss
+++ b/assets/scss/main-page/category.scss
@@ -44,11 +44,15 @@
       cursor: pointer;
     }
   }
+  a {
+    text-decoration: none !important;
+  }
   .posting-btn {
     width: 165px; height: 48px; line-height: 48px;
     margin-top: 30px; margin-bottom: 30px;
     font-size: 1rem; font-weight: 500;
     text-align: center;
+    color: #181818;
     background-color: #FFFFFF;
     border: 2px solid #3E82F1;
     border-radius: 8px;
