feat: 글 상세페이지 API 연동

--- a/assets/scss/main-page/top-bar.scss
+++ b/assets/scss/main-page/top-bar.scss
@@ -83,6 +83,7 @@
       }
       .logo {
         padding-top: 22px;
+        cursor: pointer;
         img {
           width: 139px; height: 35px;
         }
