style: 메인페이지 scss 수정

--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -6,7 +6,7 @@
     display: grid;
     grid-gap: 32px;
     padding-top: 70px; padding-bottom: 100px;
-    width: 890px; margin: 0 auto;
+    width: 890px;
     .card-wrp {
       width: 360px; height: 114px;
       padding: 20px;
