--- a/assets/scss/main-page/category.scss
+++ b/assets/scss/main-page/category.scss
@@ -66,6 +66,7 @@
       display: flex;
       height: 38px; line-height: 38px;
       font-size: 1rem; font-weight: 500;
+      cursor: pointer;
       div:first-child {
         flex-grow: 1;
       }
