--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -7,7 +7,8 @@ html {
 }
 
 body {
-  font-family: 'Noto Sans KR', 'Avenir', Helvetica, Arial, sans-serif;
+  /* font-family: 'Noto Sans KR', 'Avenir', Helvetica, Arial, sans-serif; */
+  font-family: 'Pretendard', 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0px;
