--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -2,10 +2,14 @@
 
 #Card {
   flex-grow: 1;
+  height: calc(100vh - 80px);
+  overflow-y: scroll;
+  background-color: #F3F3F3;
   .cards-wrp {
     display: grid;
     grid-gap: 32px;
     padding-top: 70px; padding-bottom: 100px;
+    margin: 0 auto;
     width: 890px;
     .card-wrp {
       width: 360px; height: 114px;
@@ -93,7 +97,7 @@
     }
     @include mobile {
       width: 500px;
-      grid-template-columns: repeat(1,402);
+      grid-template-columns: repeat(1,402px);
       .cards-wrp {
         .card-wrp {
           width: 360px; height: 114px;
