--- a/assets/scss/main-page/top-bar.scss
+++ b/assets/scss/main-page/top-bar.scss
@@ -85,6 +85,7 @@
           background: #FFFFFF;
           border: 1px solid #EFEFEF;
           border-radius: 8px;
+          box-shadow: 0px 0px 4px rgba(0, 52, 138, 0.04), 0px 4px 8px rgba(0, 52, 138, 0.06);
           .sub-menu-wrp {
             position: relative;
             color: hsl(230,4%,90%);
