--- a/assets/scss/main-page/top-bar.scss
+++ b/assets/scss/main-page/top-bar.scss
@@ -3,13 +3,12 @@
 #TopBar {
   @include mobile {
   }
-
-  height: 80px;
+  
+  width: calc(100vw - 270px); height: 80px;
   background: #FAFAFA;
   // box-shadow: 0px 0px 4px rgba(0, 52, 138, 0.04), 0px 4px 22px rgba(0, 0, 0, 0.06);
-  margin: 0 auto;
+  // margin: 0 auto;
   .topbar {
-    width: calc(100vw - 270px);
     background-color: #FAFAFA;
     .topbar-wrp {
       display: flex;
