--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -55,6 +55,7 @@
           }
         }
         .book-mark {
+          width: 16px; height: 22px;
           img {
             width: 16px; height: 22px;
           }
