--- a/assets/scss/main-page/category.scss
+++ b/assets/scss/main-page/category.scss
@@ -29,7 +29,7 @@
   .category {
     margin: 0 8px;
     .sub-menu-wrp {
-      margin: 0 16px;
+      margin: 0 8px;
       padding-bottom: 24px;
       border-bottom: 1px solid #E7E7E7;
       .search {
@@ -55,9 +55,10 @@
       }
       .menu {
         display: flex;
-        height: 48px; line-height: 48px;
+        height: 16px; line-height: 16px;
         font-size: 1rem; font-weight: 500;
-        padding-top: 8px;
+        padding: 16px;
+        border-radius: 8px;
         cursor: pointer;
         div:first-child {
           flex-grow: 1;
@@ -65,6 +66,9 @@
         div > img {
           width: 6px; height: 12px;
         }
+      }
+      .selected {
+        background-color: #EBEEF1EA;
       }
     }
     .category-wrp {
