--- a/assets/scss/main-page/category.scss
+++ b/assets/scss/main-page/category.scss
@@ -39,11 +39,17 @@
         background: #FFFFFF;
         border: 1px solid #E7E7E7;
         border-radius: 8px;
-        div:first-child {
+        .total-search {
           flex-grow: 1;
           padding-left: 12px;
           font-size: .88rem;
           color: #A3A3A3;
+          border: none !important;
+          border-radius: 8px;
+          resize: none;
+        }
+        .total-search:focus {
+          outline: none;
         }
         .search-img {
           width: 32px;
