--- a/assets/scss/main-page/category.scss
+++ b/assets/scss/main-page/category.scss
@@ -56,6 +56,7 @@
           margin-top: 3px;
           img {
             width: 16px; height: 18px;
+            cursor: pointer;
           }
         }
       }
